<resources>
    <string name="app_name">When to Leave?</string>
    <string name="arrive_text">Time of arrival</string>
    <string name="traveltime_text">Travel time</string>
    <string name="calc_button" translatable="false">When to Leave?</string>
    <string name="hint_date">Select a date</string>
    <string name="hint_time">Select a time</string>
    <string name="hour_select">Select the amount of hours</string>
    <string name="minute_select">Select the amount of minutes</string>
    <string name="hour_info">Hours</string>
    <string name="minute_info">Minutes</string>
    <string name="output_invalid">Too bad! Chances are you\'re too late! If not, please try again with a valid date and / or time!</string>
    <string name="output_time_only">today</string>
    <string name="output_full">It is Time to Leave at</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="output_inbtwn">on</string>
    <string name="output_now">It is now Time to Leave</string>
    <string name="d_arrival_hint">Date of arrival</string>
    <string name="t_arrival_hint">Time of arrival</string>
    <string name="h_travel_hint">Travel hours</string>
    <string name="m_travel_hint">Travel minutes</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_t2t" translatable="false">Time to Travel</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="minute_fill_in">Fill in the amount of minutes</string>
    <string name="hour_fill_in">Fill in the amount of hours</string>
    <string name="switch_text">Time spinner / text</string>
    <string name="t2t_distance">Distance</string>
    <string name="t2t_travel_type">Type of motion</string>
    <string name="activity_settings">Settings</string>
    <string name="t2t_unit_p">Metres</string>
    <string name="t2t_unit_s">Metre</string>
    <string name="t2t_walk">Walk</string>
    <string name="t2t_run">Run</string>
    <string name="t2t_cycle">Cycle</string>
    <string name="setting_walk">Average walking speed</string>
    <string name="setting_run">Average running speed</string>
    <string name="setting_cycle">Average cycling speed</string>
    <string name="menu_info">About</string>
    <string name="settings_switch_summary">Gives the option to type in the amount of  traveltime, instead of a spinner</string>
    <string name="prefs_theme_key">Theme</string>
    <string name="unit_hour_s">hour</string>
    <string name="unit_metre_p">Metres</string>
    <string name="unit_metre_s">Metre</string>
    <string name="unit_hour_p">hours</string>
    <string name="unit_metre_p_l">metres</string>
    <string name="unit_metre_s_l">metre</string>
    <string name="unit_day_s">day</string>
    <string name="unit_day_p">days</string>
    <string name="unit_minute_s">minute</string>
    <string name="unit_minute_p">minutes</string>
    <string name="unit_second_s">second</string>
    <string name="unit_second_p">seconds</string>
    <string name="and">and</string>
    <string name="comma" translatable="false">,</string>
    <string name="unit">km/h</string>
    <string name="t2t_gag">takes about</string>
    <string name="t2t_output_error">Use a distance of at least 1 metre</string>
    <string name="activity_about">About</string>
    <string name="about_version" translatable="false">App version</string>
    <string name="about_summary">As this is my first app, it\'s purpose is for me to learn Java and the Android ecosystem. So don\'t expect very useful updates and just enjoy it</string>
    <string name="disclaimer_title" translatable="false">Disclaimer</string>
    <string name="disclaimer_summary">This app may not always be 100% correct, so please keep this in mind. I am not responsible for problems caused by using this app</string>
    <string name="motion_cycle">Cycling</string>
    <string name="motion_walk">Walking</string>
    <string name="motion_run">Running</string>

    <string-array name="themes">
        <item>Dark</item>
        <item>Blue green</item>
        <item>Blue grey</item>
        <item>Brown</item>
        <item>Cyan</item>
        <item>Dark blue</item>
        <item>Green</item>
        <item>Light blue</item>
        <item>Orange</item>
        <item>Pepita Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Light</item>
        <item>Yellow</item>
    </string-array>
    <string name="set_notification">Set notification</string>
    <string name="menu_notification">Notifications</string>
    <string name="notification_no_scheduled">There are no scheduled notifications</string>
    <string name="noti_start_scheduled_s">There is</string>
    <string name="noti_start_scheduled_p">There are</string>
    <string name="noti_end_scheduled_s">scheduled notification</string>
    <string name="noti_end_scheduled_p">scheduled notifications</string>
    <string name="confirm_delete">Are you sure you want to delete this notification?</string>
    <string name="confirm_delete_button">Yes</string>
    <string name="not_t2l">It is time to leave!</string>
    <string name="not_channel_title">Default notification channel</string>
    <string name="not_channel_description">Default notification channel for When to leave?.</string>
    <string name="cancel_all_not">Cancel all notifications</string>
</resources>
